--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.github.f4b6a3</groupId>
-			<artifactId>commons</artifactId>
-			<version>1.0.2</version>
+			<artifactId>util</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
