--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.f4b6a3</groupId>
 	<artifactId>tsid-creator</artifactId>
-	<version>3.0.3-SNAPSHOT</version>
+	<version>3.0.3</version>
 	<packaging>jar</packaging>
 
 	<name>tsid-creator</name>
@@ -44,7 +44,7 @@
 		<url>https://github.com/f4b6a3/tsid-creator</url>
 		<connection>scm:git:ssh://git@github.com/f4b6a3/tsid-creator.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/f4b6a3/tsid-creator.git</developerConnection>
-		<tag>tsid-creator-3.0.2</tag>
+		<tag>tsid-creator-3.0.3</tag>
 	</scm>
 
 	<distributionManagement>
