Add the system property and env variable to configure the node count #19

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
 
 	<name>tsid-creator</name>
 	<url>http://github.com/f4b6a3/tsid-creator</url>
-	<description>A Java library for generating TSIDs (Time Sortable Identifier)</description>
-
+	<description>A Java library for generating Time-Sorted Unique Identifiers (TSID).</description>
 
 	<licenses>
 		<license>
